--- a/do-not-edit/assets/scss/objects/_site-header.scss
+++ b/do-not-edit/assets/scss/objects/_site-header.scss
@@ -8,7 +8,7 @@
 
 .site-header {
 	position: relative;
-	z-index: 1;
+	z-index: 10;
 	border-bottom: $base--border;
 
 	.wrap {
